--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Turks and Caicos Resort</title>
 
-	
-  
-
   </head>
   <body style="margin: 0;">
     <div id="app">
       
     </div>
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
   </body>
 </html>
